--- a/index.html
+++ b/index.html
@@ -274,16 +274,13 @@
     </section><!-- /Skills Section -->
 
 
-
     <!-- Resume Section -->
     <section id="resume" class="resume section">
 
         <!-- Section Title -->
         <div class="container section-title" data-aos="fade-up">
             <h2>Resumo</h2>
-            <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-                consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia
-                fugiat sit in iste officiis commodi quidem hic quas.</p> -->
+
         </div>
         <!-- End Section Title -->
 
@@ -296,10 +293,10 @@
 
                     <h3 class="resume-title">Formação</h3>
                     <div class="resume-item">
-                        <h4>Engenharia de Software</h4>
-                        <h5>2023 - 2027</h5>
+                        <h4>Análise e desenvolvimento de sistemas</h4>
+                        <h5>2023 - 2025</h5>
                         <p><em>Centro Universitário FAG</em></p>
-                        <p> </p>
+                        <p></p>
                     </div><!-- Edn Resume Item -->
 
                     <div class="resume-item">
@@ -315,10 +312,20 @@
                     <h3 class="resume-title">Experiência Profissional</h3>
                     <div class="resume-item">
                         <h4>Desenvolvedor Full Stack</h4>
-                        <h5>2023 - Atual</h5>
+                        <p>Fag Cascavel</p>
+                        <p>11/2024 - atual</p>
+                        <p><em>Formato presencial, em Cascavel PR </em></p>
+                        <p>Desenvolvimento de projetos com PHP e React </p>
+                    </div>
+                    <!-- Edn Resume Item -->
+                    <div class="resume-item">
+                        <h4>Desenvolvedor Full Stack</h4>
+                        <p>Zandoná Soluções em Software</p>
+                        <p>08/2023 - 11/2024</p>
                         <p><em>Formato híbrido, em Cascavel PR </em></p>
-                        <p>Desenvolvo Softwares ERPs para com Laravel e Jquery</p>
-                    </div><!-- Edn Resume Item -->
+                        <p>Desenvolvimento de projetos com PHP e React </p>
+                    </div>
+                    <!-- Edn Resume Item -->
 
 
                 </div>
@@ -329,7 +336,6 @@
 
     </section>
     <!-- /Resume Section -->
-
 
 
     <!-- Portfolio Section -->
@@ -369,7 +375,6 @@
         </div>
 
     </section><!-- /Portfolio Section -->
-
 
 
     <section id="services">
@@ -438,7 +443,6 @@
 </footer>
 
 
-
 <!-- Scroll Top -->
 <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
         class="bi bi-arrow-up-short"></i></a>
@@ -462,10 +466,15 @@
 
 <script>
     (function (i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function () {
             (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date(); a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
     })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
 
